feat(bookstore): migrate to webforJ 26 / Spring Boot 4